# DSA4263_Group_Project

./: .gitignore  LICENSE  README.md  example_usage.py  extracted_features.csv  feature_extraction.py  pyproject.toml  requirements.txt  visualization.py
.github/workflows/: overleaf-figs-only.yml  overleaf-sync.yml
data/processed/: cleaning_report.txt
docs/: code_review.md  index.md
dsa4263_group_project/: __init__.py  config.py  data_cleaning.py  data_cleaning_finalized.py  dataset.py  feature_engineering.py  feature_engineering_finalized.py  features.py  haoran_main.py  haoran_main_parallel.py  main.py  main_finalized.py  main_light.py  model_main.py  modeling_finalized.py  models.py  plots.py  temporal_feature_engineering.py  visualization.py
dsa4263_group_project/modeling/: __init__.py  predict.py  train.py
models/: best_spam_classifier.pkl
models/saved_bert_model/: config.json
my_venv/: pyvenv.cfg
notebooks/: 01_data_cleaning.ipynb  02_eda_and_graph_visualization.ipynb  03_GNN_test.py  DSA4263_checkdata.ipynb  EDA.ipynb  Graph_EDA_Oct27.ipynb  date_data_EDA.ipynb  date_data_cleaning.ipynb  date_data_feature_engineering.ipynb  date_data_feature_engineering_and_evaluation_TIME_AWARE.ipynb  email_graph_features.csv  graph_clean.ipynb  graphclean.ipynb  lily.ipynb  sender_time_series_analysis.ipynb  spam_feature_statistics.csv  spam_graph_eda_improved.ipynb  temporal_geographic_figures.ipynb  time_series_feature_selection.py
notebooks/lzy/: lzy-EDA.ipynb  lzy-data cleaning, feature engeering & model training.ipynb  lzy-merge_files.ipynb
notebooks/ud/: text_eda.ipynb
notebooks/wenjing/: nlp_eda_ablation.ipynb
workflows/: overleaf-sync.yml
(+5 files in other folders)
