[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dsa4263-group-project"
version = "0.1.0"
description = "Data science workflow scaffolding for the DSA4263 group project."
authors = [{ name = "DSA4263 Group" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.1.0",
    "joblib>=1.3",
    "matplotlib>=3.8",
    "networkx>=3.2",
    "nltk>=3.9.2",
    "pandas>=2.1",
    "pip>=25.3",
    "scikit-learn>=1.4",
    "scikit-optimize>=0.10.2",
    "seaborn>=0.13.2",
    "vadersentiment>=3.3.2",
    "wordcloud>=1.9.4",
]

[project.optional-dependencies]
dev = [
    "flake8>=7.0",
    "mkdocs>=1.6",
    "mypy>=1.8",
    "pytest>=8.0",
    "toml-sort>=0.23",
    "yamllint>=1.35",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["dsa4263_group_project*"]
